# sage

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  README.md  VERSION.txt  bootstrap  configure.ac  conftest.py  environment-3.12-linux-aarch64.yml  environment-3.12-linux.yml  environment-3.12-macos-x86_64.yml  environment-3.12-macos.yml  environment-3.12-win.yml  environment-3.13-linux-aarch64.yml  environment-3.13-linux.yml  environment-3.13-macos-x86_64.yml  environment-3.13-macos.yml  environment-3.13-win.yml  environment-3.14-linux-aarch64.yml  environment-3.14-linux.yml  environment-3.14-macos-x86_64.yml  environment-3.14-macos.yml  environment-3.14-win.yml  meson.build  meson.options  pyproject.toml
.github/: sync_labels.py
.github/workflows/: build.yml  ci-meson.yml  ci-minimal.yml  ci-optional-packages.yml  ci.yml  release.yml  ruff.toml  types.yml
.upstream.d/: 20-github.com-sagemath-sage-releases
docker/: Dockerfile
git-hooks/: pre-commit
pkgs/sage-setup/: VERSION.txt
pkgs/sagemath-objects/: VERSION.txt
pkgs/sagemath-repl/: VERSION.txt
src/: meson.build
src/doc/: meson.build
src/sage/: config.py.in  env.py  meson.build  version.py
src/sage/algebras/: clifford_algebra.py  commutative_dga.py  free_algebra.py  free_algebra_quotient_element.py  jordan_algebra.py  octonion_algebra.pyx  quantum_matrix_coordinate_algebra.py  splitting_algebra.py
src/sage/arith/: long.pxd  misc.py
src/sage/calculus/: calculus.py  desolvers.py  tests.py  wester.py
src/sage/categories/: __init__.py  action.pxd  action.pyx  anderson_motives.py  category_types.py  commutative_rings.py  coxeter_groups.py  drinfeld_modules.py  enumerated_sets.py  function_fields.py  map.pyx  meson.build  modules_with_basis.py  morphism.pyx  number_fields.py  ore_modules.py  partially_ordered_monoids.py  pushout.py  rings.py  simplicial_sets.py
src/sage/cli/: __init__.py  cli_test.py  eval_cmd_test.py  jupyter_kernel_cmd.py  jupyter_kernel_cmd_test.py  options.py  run_file_cmd.py  run_file_cmd_test.py
src/sage/coding/: code_bounds.py  information_set_decoder.py  linear_code.py  punctured_code.py  self_dual_codes.py
src/sage/combinat/: abstract_tree.py  all.py  alternating_sign_matrix.py  bijectionist.py  binary_tree.py  combination.py  composition.py  composition_tableau.py  constellation.py  diagram.py  dyck_word.py  finite_state_machine.py  fully_commutative_elements.py  growth.py  integer_matrices.py  integer_vector.py  meson.build  necklace.py  partition.py  partition_kleshchev.py  partition_tuple.py  permutation.py  plactic_monoid.py  recognizable_series.py  ribbon_shaped_tableau.py  ribbon_tableau.py  rsk.py  set_partition_ordered.py  skew_partition.py  skew_tableau.py  specht_module.py  superpartition.py  tableau.py  tableau_tuple.py  tamari_blossoming_tree.py
src/sage/crypto/: boolean_function.pyx  classical.py  cryptosystem.py  lattice.py
src/sage/data_structures/: bitset_base.pyx  bounded_integer_sequences.pyx  stream.py
src/sage/databases/: cubic_hecke_db.py  db_class_polynomials.py  findstat.py  jones.py  oeis.py
src/sage/doctest/: __main__.py  external.py  forker.py  reporting.py  sources.py  util.py
src/sage/dynamics/: finite_dynamical_system_catalog.py
src/sage/ext/: fast_callable.pyx
src/sage/features/: __init__.py  bliss.py  brial.py  build_feature.py  coxeter3.py  cython.py  ffmpeg.py  imagemagick.py  latex.py  libhomfly.py  lrs.py  mcqd.py  meataxe.py  msolve.py  rankwidth.py  sagemath.py  sirocco.py  tdlib.py
src/sage/functions/: airy.py  bessel.py  hypergeometric.py  hypergeometric_algebraic.py  hypergeometric_parameters.py  log.py  meson.build  other.py  piecewise.py  transcendental.py
src/sage/geometry/: cone.py  fan.py  lattice_polytope.py  point_collection.pyx  toric_lattice.py  toric_lattice_element.pyx
src/sage/graphs/: bipartite_graph.py  cliquer.pxd  connectivity.pyx  digraph.py  domination.py  generic_graph.py  graph.py  graph_generators.py  graph_latex.py  matching.py  meson.build  orientations.py  planarity-compat.h  planarity.pyx
src/sage/groups/: braid.py  cactus_group.py  finitely_presented.py  generic.py  indexed_free_group.py  libgap_wrapper.pyx  raag.py
src/sage/homology/: free_resolution.py
src/sage/interfaces/: fricas.py  fricas_translator.py  gap.py  gap_workspace.py  interface.py  lie.py  mathematica.py  maxima.py  maxima_abstract.py  maxima_lib.py  qepcad.py  r.py  regina.py  singular.py  tides.py
src/sage/knots/: free_knotinfo_monoid.py  knot.py  knotinfo.py  link.py
src/sage/lfunctions/: dokchitser.py  pari.py
src/sage/libs/: braiding.pyx  ecl.pxd  ecl.pyx  eclsig.h  homfly.pyx  libecm.pyx  m4ri.pxd  m4rie.pxd  meataxe.pxd  meataxe.pyx  meson.build
src/sage/manifolds/: catalog.py  chart.py  continuous_map.py  utilities.py
src/sage/matrix/: action.pyx  args.pyx  benchmark.py  docs.py  matrix0.pxd  matrix0.pyx  matrix1.pyx  matrix2.pyx  matrix_complex_ball_dense.pyx  matrix_cyclo_dense.pyx  matrix_dense.pxd  matrix_dense.pyx  matrix_double_dense.pxd  matrix_double_dense.pyx  matrix_gap.pyx  matrix_generic_dense.pxd  matrix_generic_dense.pyx  matrix_gf2e_dense.pyx  matrix_gfpn_dense.pyx  matrix_integer_dense.pxd  matrix_integer_dense.pyx  matrix_integer_sparse.pxd  matrix_integer_sparse.pyx  matrix_mod2_dense.pxd  matrix_mod2_dense.pyx  matrix_modn_dense_double.pyx  matrix_modn_dense_flint.pxd  matrix_modn_dense_flint.pyi  matrix_modn_dense_flint.pyx  matrix_modn_dense_float.pyx  matrix_modn_dense_template.pxi  matrix_modn_sparse.pyx  matrix_numpy_dense.pyx  matrix_polynomial_dense.pyx  matrix_rational_dense.pxd  matrix_rational_dense.pyx  matrix_rational_sparse.pyx  matrix_space.py  matrix_sparse.pxd  matrix_sparse.pyx  (+5 more)
src/sage/matroids/: database_matroids.py  matroid.pxd  matroid.pyx  rank_matroid.py  utilities.py
src/sage/misc/: abstract_method.py  (+24 more)
src/sage_docbuild/: builders.py  conf.py
src/sage_setup/: find.py
subprojects/: ecl.wrap  highs.wrap  maxima.wrap
tools/: README.md  check_ruff.py  find_cyclic_imports.py  update-conda.py  update-meson.py  update-typestubs.py  update_typestubs.py
(+650 files in other folders)
